--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             margin: 0;
             text-align: center;
         }
+
 .irradiations, .symptoms, .menu-sections {
     display: flex; /* フレックスボックスでレイアウト */
     flex-direction: column; /* 縦方向にボタンを並べる */
@@ -226,7 +227,7 @@
 
 /* ホバー時のアニメーション */
 .irradiations button:hover, .symptoms button:hover, .menu-sections button:hover {
-    background-color: #e0e0e0; /* ホバー時に背景色を少し暗く */
+    background-color: #444444; /* ホバー時に背景色を少し暗く */
     transform: translateY(-3px); /* ホバー時に少し上に持ち上がる */
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15); /* 影を強くして立体感を出す */
 }
