--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
     <div class="symptoms">
         <button type="button" id="3-1irradiations" onclick="selectBodyMenu(this)" data-price="15000">まずはお試しコース</button>
         <button type="button" id="3-2irradiations" onclick="selectBodyMenu(this)" data-price="15000">挙式直前1DAYコース</button>
-        <button type="button" id="3-3irradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり1ヶ月スリム集中ケアコース</button>
-        <button type="button" id="3-4irradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり3ヶ月スリム集中ケアコース</button>
+        <button type="button" id="3-3irradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>1ヶ月スリム集中ケアコース</button>
+        <button type="button" id="3-4irradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>3ヶ月スリム集中ケアコース</button>
     </div>
 </div>
 
@@ -502,8 +502,8 @@
     <div class="symptoms">
         <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">眉毛スタイリング×WAX</button>
         <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">挙式直前1DAYコース</button>
-        <button type="button" id="sanirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり1ヶ月スリム集中ケアコース</button>
-        <button type="button" id="yonirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり3ヶ月スリム集中ケアコース</button>
+        <button type="button" id="sanirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>1ヶ月スリム集中ケアコース</button>
+        <button type="button" id="yonirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>3ヶ月スリム集中ケアコース</button>
     </div>
 </div>
 
@@ -583,7 +583,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: ''
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
