--- a/index.html
+++ b/index.html
@@ -370,9 +370,12 @@
     </div>
     <div class="symptoms" id="irradiations66">
         <button type="button" id="irradiations5-1" onclick="selectirradiations(this)" data-price="15000">Y字・円盤ブロープ×ハンドECS</button>
-        <button type="button" id="irradiations5-2" onclick="selectirradiations(this)" data-price="15000">痩身マシンECS脂肪分解コース</button>
-        <button type="button" id="irradiations5-3" onclick="selectirradiations(this)" data-price="15000">痩身マシン全身徹底スリムコース</button>
-        <button type="button" id="irradiations5-4" onclick="selectirradiations(this)" data-price="15000">ハンドトリートメント</button>
+        <button type="button" id="irradiations5-2" onclick="selectirradiations(this)" data-price="15000">Y字ブロープ×ハンドECS</button>
+        <button type="button" id="irradiations5-3" onclick="selectirradiations(this)" data-price="15000">円盤ブロープ×ハンドECS</button>
+        <button type="button" id="irradiations5-4" onclick="selectirradiations(this)" data-price="15000">Y字ブロープ</button>
+        <button type="button" id="irradiations5-2" onclick="selectirradiations(this)" data-price="15000">円盤ブロープ</button>
+        <button type="button" id="irradiations5-3" onclick="selectirradiations(this)" data-price="15000">Y字・円盤ブロープ</button>
+        <button type="button" id="irradiations5-4" onclick="selectirradiations(this)" data-price="15000">ハンドECS</button>
     </div>
 </div>
 
@@ -802,7 +805,6 @@ function selectmanorwoman(element) {
         document.querySelector('button[onclick="showMenu(\'facial\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'body\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'hairremovalman\')"]').style.display = 'inline-block';
-        document.querySelector('button[onclick="showMenu(\'bridal\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'eyebrows\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'selfwhitening\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'Mugwortsteamed\')"]').style.display = 'inline-block';
