--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
         <button type="button" id="irradiations2-8" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング<br>(クリスティーナILLUSTRIOUS)</button>
         <button type="button" id="irradiations2-9" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング<br>(クリスティーナBIOPHYTO)</button>
         <button type="button" id="irradiations2-10" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング<br>(クリスティーナSILK)</button>
+        <button type="button" id="irradiations2-11" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング<br>(剥離あり・クリスティーナROSEDEMER)</button>
         <button type="button" id="irradiations2-11" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング<br>(剥離少し・ハーブリプロ)</button>
         <button type="button" id="irradiations2-12" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング<br>(剥離なし・エピダーマルスキン)</button>
     </div>
@@ -503,10 +504,8 @@
 <div id="eyebrows" class="menu-section">
     <label style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆眉毛メニュー◆<br>コースをお選びください</label>
     <div class="symptoms">
-        <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">眉毛スタイリング×WAX</button>
-        <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">挙式直前1DAYコース</button>
-        <button type="button" id="sanirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>1ヶ月スリム集中ケアコース</button>
-        <button type="button" id="yonirradiations" onclick="selectBodyMenu(this)" data-price="15000">二の腕ほっそり<br>3ヶ月スリム集中ケアコース</button>
+        <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">眉毛スタイリング</button>
+        <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">眉毛スタイリング×WAX</button>
     </div>
 </div>
 
@@ -519,7 +518,7 @@
 </div>
 
 <div id="Mugwortsteamed" class="menu-section">
-    <label style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆セルフホワイトニング◆<br>コースをお選びください</label>
+    <label style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆よもぎ蒸し・オイルリンパ◆<br>コースをお選びください</label>
     <div class="symptoms">
         <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">発汗 ダイエット むくみ改善</button>
         <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">美肌効果 エイジング 肌トラブル改善</button></button>
