--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <label>◆マッサージコース◆</label>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">リラックスマッサージ</button>
-                <button type="button" onclick="selectSymptom(this)">ベーシックマッサージ</button>
+                <button type="button" onclick="selectSymptom(this)">ベーシックマッサージ〈50分〉</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
