--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)">眉カット</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)">ベーシックマッサージ(パック付き)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)">リラックスマッサージの(パック付き)</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)">リラックスマッサージの<br>(パック付き)</button>
             </div>
         </div>
 
