--- a/index.html
+++ b/index.html
@@ -558,6 +558,13 @@ if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.
     return;
 }
 
+function prepareMessageForLine() {
+    let messageText = irradiationsCount.replace(/<br\s*\/?>/gi, ""); // 改行タグを削除
+    // 他のメッセージ内容も含めてLINEで送信する処理
+    console.log(messageText);
+    // LINE送信処理へ
+}
+            
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
