--- a/index.html
+++ b/index.html
@@ -366,7 +366,10 @@ function selectirradiations(button) {
 
     // 選択されたオプションを取得
     const selectedButtons = document.querySelectorAll('.irradiations button.active');
-    const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
+    const selectedIrradiations = Array.from(selectedButtons).map(btn => {
+        // ボタンのテキストから改行を除去して取得
+        return btn.innerText.replace(/\n/g, '');
+    });
     irradiationsCount = selectedIrradiations.join(', ');
 
         // すべてのオプションの価格を再計算
@@ -556,13 +559,6 @@ function showMenu(menu) {
 if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.irradiationsCount || !formData.nailCount) {
     alert('お名前・電話番号・他店or自店・メニューすべてご記入ください。');
     return;
-}
-
-function prepareMessageForLine() {
-    let messageText = irradiationsCount.replace(/<br\s*\/?>/gi, ""); // 改行タグを削除
-    // 他のメッセージ内容も含めてLINEで送信する処理
-    console.log(messageText);
-    // LINE送信処理へ
 }
             
             // LINEトークにメッセージを送信
