--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)" data-price="15000">ネイルセミナー2時間〈140分〉</button>
                 <button type="button" onclick="selectSymptom(this)" data-price="15000">ネイルセミナー3時間〈200分〉</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">シャイニージェルパワーベース導入セミナー〈150分〉</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">シャイニージェルパワーベース<br>導入セミナー〈150分〉</button>
                 <button type="button" onclick="selectSymptom(this)" data-price="15000">ネイルマシンセミナー〈260分〉</button>
             </div>
         </div>
@@ -354,6 +354,9 @@ function selectSymptom(button) {
     // 選択されたオプションを取得
     const selectedButtons = document.querySelectorAll('.symptoms button.active');
     const selectedSymptoms = Array.from(selectedButtons).map(btn => btn.innerText);
+        // ボタンのテキストから改行を除去して取得
+        return btn.innerText.replace(/\n/g, '');
+    });
     selectedSymptom = selectedSymptoms.join(', ');
 
     // 表示を更新
