--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ function showMenu(menu) {
             };
 
 // フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.irradiationsCount) {
+if (!formData.name || !formData.phone || !formData.selectedSymptom) {
     alert('お名前・電話番号・他店or自店・メニューすべてご記入ください。');
     return;
 }
