--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@ function selectSymptom(button) {
 
     // 選択されたオプションを取得
     const selectedButtons = document.querySelectorAll('.symptoms button.active');
-    const selectedSymptoms = Array.from(selectedButtons).map(btn => btn.innerText);
-    selectedSymptom = selectedSymptoms.join(', ');
+    const selectedSymptoms = Array.from(selectedButtons).map(btn => btn.innerText.replace(/\r?\n|\r/g, '')); // 改行を削除
+    selectedSymptom = selectedSymptoms.join(', '); // カンマで区切って結合
 
     // 表示を更新
     updateDisplayInfo();
