--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@
         <div id="male" class="menu-section">
             <label>◆ブライダルコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">洋装プランA〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">洋装プランB〈120分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">洋装プランC〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈90分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">洋装プランA〈100分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">洋装プランB〈150分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">洋装プランC〈170分〉</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ(パック付き)〈30分〉</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ(パック付き)〈20分〉</button>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">リラックスマッサージの(パック付き)〈30分〉</button>
             </div>
         </div>
@@ -234,39 +234,39 @@
         <div id="female" class="menu-section">
             <label>◆シェービングコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">リラックスコース〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ベーシックコース〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スピードコース〈90分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">リラックスコース〈90分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ベーシックコース〈70分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スピードコース〈60分〉</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈40分〉</button>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中(キャミソールライン)〈30分〉</button>
                 <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈15分〉</button>
                 <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈10分〉</button>
+                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈15分〉</button>
             </div>
         </div>
 
         <div id="whitening" class="menu-section">
             <label>◆マッサージコース◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リラックスマッサージ〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リラックスマッサージ〈20分〉</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ベーシックマッサージ〈30分〉</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈40分〉</button>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中(キャミソールライン)〈30分〉</button>
                 <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈15分〉</button>
                 <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈10分〉</button>
+                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈15分〉</button>
             </div>
         </div>
 
@@ -345,27 +345,27 @@
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
             '眉カット〈30分〉': 30,
-            '襟足〈30分〉': 30,
+            '襟足〈40分〉': 40,
             '背中(キャミソールライン)〈30分〉': 30,
             '背中(腰まで)〈30分〉': 30,
-            'デコルテ〈30分〉': 30,
+            'デコルテ〈15分〉': 15,
             '腕〈30分〉': 30,
-            '保湿パック〈30分〉': 30,
-            'ベーシックマッサージ(パック付き)〈30分〉': 30,
+            '保湿パック〈10分〉': 10,
+            'ベーシックマッサージ(パック付き)〈30分〉': 20,
             'リラックスマッサージの(パック付き)〈30分〉': 30,
-            '美白パック〈30分〉': 30
+            '美白パック〈15分〉': 15
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-        '和装プラン〈30分〉': 30,
-        '洋装プランA〈60分〉': 60,
-        '洋装プランB〈120分〉': 120,
-        '洋装プランC〈30分〉': 30,
-        'リラックスコース〈60分〉': 60,
-        'ベーシックコース〈30分〉': 30,
-        'スピードコース〈90分〉': 90
+        '和装プラン〈90分〉': 90,
+        '洋装プランA〈100分〉': 100,
+        '洋装プランB〈150分〉': 150,
+        '洋装プランC〈170分〉': 170,
+        'リラックスコース〈60分〉': 90,
+        'ベーシックコース〈30分〉': 70,
+        'スピードコース〈60分〉': 60
         };
 
 
@@ -602,7 +602,7 @@ if (!formData.name || !formData.phone || !formData.selectedSymptom) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
