--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ function updateTotalAmount() {
             };
 
 // フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.selectedSymptom) {
+if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.dates[0]) {
     alert('お名前・電話番号・メニューすべてご記入ください。');
     return;
 }
