--- a/index.html
+++ b/index.html
@@ -365,6 +365,8 @@
         '洋装プランC〈170分〉': 170,
         'リラックスコース〈90分〉': 90,
         'ベーシックコース〈70分〉': 70,
+        'リラックスマッサージ〈90分〉': 90,
+        'ベーシックマッサージ〈70分〉': 70,
         'スピードコース〈60分〉': 60
         };
 
