--- a/index.html
+++ b/index.html
@@ -389,9 +389,8 @@ function updateTotalAmount() {
             const formData = {
                 name: document.getElementById('name').value,
                 phone: document.getElementById('phone').value,
-                const date1 = formatDate(document.getElementById('date1').value);
-                const date2 = formatDate(document.getElementById('date2').value);
                 visitCount: visitCount,
+                dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
 
